tests/errors/fun_nonrec_err/fun_nonrec_err.c
#error fun_nonrec_err:8:5 The name 'nonRecLoop' here should denote to some value; but not found.
